--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
    <link rel="stylesheet" href="css/style.css" type="text/css">
    <link rel="stylesheet" href="css/skins/orange.css" type="text/css">
    <link rel="icon" href="./images/nuclear.png">
+   <link rel="stylesheet" href="./css/skills.css">
 
 
    <!-- Live Style Switcher - Demo Only  -->
@@ -23,7 +24,7 @@
    <script src="https://kit.fontawesome.com/e44b1d70e7.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="dark">
 
    <!-- Preloader -->
    <div class="preloader">
@@ -76,13 +77,14 @@
             <div class="container">
                <div class="intro">
 
-                  <h1> I am Gela Samsonidze</h1>
-                  <p> Web Developer</p>
+                  <h1 style="margin-bottom: 0; padding: 0;"> I am Gela Samsonidze</h1>
+                  <h1 style="margin: 0; margin-bottom: 20px;"> Web Developer</h1>
+                  <p> I create interactive experiencees for web.</p>
                   <div class="social-links">
-                     <a href="https://twitter.com/GHhardy5000"><i class="fa fa-twitter"></i></a>
-                     <a href="https://www.facebook.com/tpkh.hardy.9/"><i class="fa fa-facebook"></i></a>
-                     <a href="https://github.com/hardy333"><i class="fa fa-github"></i></a>
-                     <a href="https://www.linkedin.com/in/gela-samsonidze-008446142/"><i class="fa fa-linkedin"></i></a>
+                     <a target="_blank" href="https://twitter.com/gela_samsonidze"><i class="fa fa-twitter"></i></a>
+                     <a target="_blank" href="https://www.facebook.com/hardy5333/"><i class="fa fa-facebook"></i></a>
+                     <a target="_blank" href="https://github.com/hardy333"><i class="fa fa-github"></i></a>
+                     <a target="_blank" href="https://www.linkedin.com/in/gsam1/"><i class="fa fa-linkedin"></i></a>
                   </div>
                </div>
             </div>
@@ -110,6 +112,7 @@
                      </div>
                      <div class="row">
                         <div class="personal-info padd-15">
+                           <!-- Age, birthday, city, website... -->
                            <div class="row">
                               <div class="info-item padd-15">
                                  <p>Birthday : <span>30 July 1997</span></p>
@@ -129,85 +132,51 @@
                               <div class="info-item padd-15">
                                  <p>City : <span>Tbilisi</span></p>
                               </div>
-
                            </div>
-                           <div class="row">
+                           <!-- Buttons -->
+                           <div class="row ">
                               <div class="buttons padd-15">
-                                 <a href="#" class="btn">Download CV</a>
-                                 <a href="#contact" data-section-index="1" class="btn hire-me">Hire Me</a>
+                                 <a href="#contact" data-section-index="1" class="btn hire-me">Contact Me</a>
                               </div>
                            </div>
-                        </div>
-                        <div class="skills padd-15">
-                           <div class="row">
-                              <div class="skill-item padd-15">
-                                 <h5>Javascript</h5>
-                                 <div class="progress">
-                                    <div class="progress-in" style="width: 90%"></div>
-                                    <div class="skill-percent">90%</div>
+                           <!-- Skills -->
+                           <div class="row skills-row">
+                              <div class="buttons padd-15">
+                                 <h2 class="skills-title-main">Skills</h2>
+                                 <!-- Frontend -->
+                                 <div class="skills-content-container">
+                                    <h3 class="skills-title">Frontend</h3>
+                                    <ul class="skills-list">
+                                       <li class="skill">HTML</li>
+                                       <li class="skill">Css</li>
+                                       <li class="skill">BEM</li>
+                                       <li class="skill">SCSS/SASS</li>
+                                       <li class="skill">Bootstrap</li>
+                                       <li class="skill">Materializecss</li>
+                                       <li class="skill">Tailwindcss</li>
+                                       <li class="skill">JSS</li>
+                                       <li class="skill">OOP</li>
+                                       <li class="skill">React</li>
+                                       <li class="skill">Redux/Redux-toolkit</li>
+                                       <li class="skill">Material.ui</li>
+                                       <li class="skill">Gatsby.js</li>
+                                       <li class="skill">Next.js</li>
+
+                                    </ul>
                                  </div>
-                              </div>
-                              <div class="skill-item padd-15">
-                                 <h5>HTML/CSS</h5>
-                                 <div class="progress">
-                                    <div class="progress-in" style="width: 80%"></div>
-                                    <div class="skill-percent">80%</div>
-                                 </div>
-                              </div>
-                              <div class="skill-item padd-15">
-                                 <h5>React</h5>
-                                 <div class="progress">
-                                    <div class="progress-in" style="width: 50%"></div>
-                                    <div class="skill-percent">50%</div>
-                                 </div>
-                              </div>
-                              <div class="skill-item padd-15">
-                                 <h5>Git/Github</h5>
-                                 <div class="progress">
-                                    <div class="progress-in" style="width: 80%"></div>
-                                    <div class="skill-percent">80%</div>
-                                 </div>
-                              </div>
-                              <div class="skill-item padd-15">
-                                 <h5>Webpack/Babel</h5>
-                                 <div class="progress">
-                                    <div class="progress-in" style="width: 60%"></div>
-                                    <div class="skill-percent">60%</div>
-                                 </div>
-                              </div>
-                              <div class="skill-item padd-15">
-                                 <h5>Bootstrap</h5>
-                                 <div class="progress">
-                                    <div class="progress-in" style="width: 60%"></div>
-                                    <div class="skill-percent">60%</div>
-                                 </div>
-                              </div>
-                              <div class="skill-item padd-15">
-                                 <h5>Jquery</h5>
-                                 <div class="progress">
-                                    <div class="progress-in" style="width: 60%"></div>
-                                    <div class="skill-percent">60%</div>
-                                 </div>
-                              </div>
-                              <div class="skill-item padd-15">
-                                 <h5>Sass</h5>
-                                 <div class="progress">
-                                    <div class="progress-in" style="width: 80%"></div>
-                                    <div class="skill-percent">80%</div>
-                                 </div>
-                              </div>
-                              <div class="skill-item padd-15">
-                                 <h5>Node/Express</h5>
-                                 <div class="progress">
-                                    <div class="progress-in" style="width: 20%"></div>
-                                    <div class="skill-percent">20%</div>
-                                 </div>
-                              </div>
-                              <div class="skill-item padd-15">
-                                 <h5>MongoDB</h5>
-                                 <div class="progress">
-                                    <div class="progress-in" style="width: 30%"></div>
-                                    <div class="skill-percent">30%</div>
+                                 <!-- Backend -->
+                                 <div class="skills-content-container">
+                                    <h3 class="skills-title">Backend</h3>
+                                    <ul class="skills-list">
+                                       <li class="skill">Node.js</li>
+                                       <li class="skill">Express.js</li>
+                                       <li class="skill">MongoDB</li>
+                                       <li class="skill">Mongoose</li>
+                                       <li class="skill">EJS</li>
+                                       <li class="skill">Passport.js</li>
+                                       <li class="skill">JWT</li>
+                                       <li class="skill">Firebase</li>
+                                    </ul>
                                  </div>
                               </div>
                            </div>
@@ -525,11 +494,11 @@
 
 
    <!-- Live Style Switcher - Demo Only -->
-   <div class="style-switcher">
-      <div class="toggle-style-switcher">
+   <div style="background-color: transparent; border: none; right: 15px; top: 15px;" class="style-switcher  open">
+      <!-- <div class="toggle-style-switcher">
          <i class="fa fa-cog fa-spin"></i>
-      </div>
-      <h5>Style Switcher</h5>
+      </div> -->
+      <!-- <h5>Style Switcher</h5>
       <ul>
          <li><a href="javascript:void(0);" title="pink" style="background-color: #ec1839"
                onclick="setActiveStyle('pink')"></a></li>
@@ -541,16 +510,18 @@
                onclick="setActiveStyle('yellow')"></a></li>
          <li><a href="javascript:void(0);" title="green" style="background-color: #72b626"
                onclick="setActiveStyle('green')"></a></li>
-      </ul>
-      <h5>Body Skin</h5>
-      <label>
-         <input type="radio" class="body-skin" name="body-style" value="light">
-         Light
-      </label>
-      <label>
-         <input type="radio" class="body-skin" name="body-style" value="dark" checked="true">
-         Dark
-      </label>
+      </ul> -->
+      <!-- <h5>Body Skin</h5> -->
+
+      <div class="">
+         <input type="checkbox" class="checkbox dark-theme-switcher-checkbox" id="checkbox" checked>
+         <label for="checkbox" class="checkbox-label">
+            <i class="fas fa-moon"></i>
+            <i class="fas fa-sun"></i>
+            <span class="ball"></span>
+         </label>
+      </div>
+
    </div>
    <!-- Live Style Switcher - Demo Only End -->
 
