--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
    <script src="https://kit.fontawesome.com/e44b1d70e7.js" crossorigin="anonymous"></script>
 </head>
 
-<body class="dark">
+<body class="">
 
    <!-- Preloader -->
    <div class="preloader">
