--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
                                  <p>Age : <span>23</span></p>
                               </div>
                               <div class="info-item padd-15">
-                                 <p>Website : <span>www.gsamsonidze.ge</span></p>
+                                 <p>Website : <span>www.gsamsonidze.com</span></p>
                               </div>
                               <div class="info-item padd-15">
-                                 <p>Email : <span>samsonidze7@yahoo.com</span></p>
+                                 <p>Email : <span>samsonidze14@gmail.com</span></p>
                               </div>
                               <div class="info-item padd-15">
                                  <p>Phone : <span>+995 551 195 681</span></p>
@@ -159,6 +159,7 @@
                                        <li class="skill">React</li>
                                        <li class="skill">Redux/Redux-toolkit</li>
                                        <li class="skill">Material.ui</li>
+                                       <li class="skill">Styled Components</li>
                                        <li class="skill">Gatsby.js</li>
                                        <li class="skill">Next.js</li>
 
@@ -514,7 +515,7 @@
       <!-- <h5>Body Skin</h5> -->
 
       <div class="">
-         <input type="checkbox" class="checkbox dark-theme-switcher-checkbox" id="checkbox" checked>
+         <input type="checkbox" class="checkbox dark-theme-switcher-checkbox" id="checkbox">
          <label for="checkbox" class="checkbox-label">
             <i class="fas fa-moon"></i>
             <i class="fas fa-sun"></i>
