--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                  <p>Age : <span>24</span></p>
                               </div>
                               <div class="info-item padd-15">
-                                 <p>Website : <span>www.gsamsonidze.com</span></p>
+                                 <p>Website : <span>gsamsonidze.com</span></p>
                               </div>
                               <div class="info-item padd-15">
                                  <p>Email : <span>samsonidze14@gmail.com</span></p>
