--- a/index.html
+++ b/index.html
@@ -251,6 +251,10 @@
                      <button type="button" data-filter="web-design"> Javascript</button>
                      <button type="button" data-filter="photography">React</button>
                      <button type="button" data-filter="wordpress">Bootstrap</button>
+                     <button type="button" data-filter="wordpress">Scss</button>
+                     <button type="button" data-filter="wordpress">Next.js</button>
+                     <button type="button" data-filter="wordpress">Gatsby.js</button>
+                     <button type="button" data-filter="wordpress">Node.js</button>
                   </div>
                </div>
                <div class="row">
@@ -258,14 +262,14 @@
                   <div class="portfolio-item padd-15" data-category="web-design">
                      <div class="portfolio-item-inner shadow-dark">
                         <div class="portfolio-img">
-                           <img src="images/portfolio/1.jpg" alt="portfolio">
+                           <img src="images/portfolio/kanban.jpg" alt="portfolio">
                         </div>
                         <div class="portfolio-info">
-                           <h4>React</h4>
-
+                           <h4>React.js</h4>
                            <!-- GIHUB -->
                            <div class="icon__1">
-                              <a href="https://github.com/hardy333/color-app-" target="_blank" class="portfolio-github">
+                              <a href="https://github.com/hardy333/kanban_-main" target="_blank"
+                                 class="portfolio-github">
 
                                  <i class="fab fa-github-alt"></i>
 
@@ -274,8 +278,7 @@
 
                            <div class="icon">
                               <!-- color app -->
-                              <a target="_blank" href="https://elastic-kowalevski-2eee4e.netlify.app/"
-                                 class="portfolio-link">
+                              <a target="_blank" href="https://poetic-melba-1a7047.netlify.app/" class="portfolio-link">
                                  <i class="fas fa-external-link-alt"></i>
                               </a>
                            </div>
@@ -287,13 +290,14 @@
                   <div class="portfolio-item padd-15" data-category="wordpress">
                      <div class="portfolio-item-inner shadow-dark">
                         <div class="portfolio-img">
-                           <img src="images/portfolio/2.jpg" alt="portfolio">
+                           <img src="images/portfolio/invoice.jpg" alt="portfolio">
                         </div>
                         <div class="portfolio-info">
-                           <h4>React</h4>
+                           <h4>Next.js</h4>
                            <!-- GIHUB -->
                            <div class="icon__1">
-                              <a href="https://github.com/hardy333/covid-app" target="_blank" class="portfolio-github">
+                              <a href="https://github.com/hardy333/invoice-app-main" target="_blank"
+                                 class="portfolio-github">
 
                                  <i class="fab fa-github-alt"></i>
 
@@ -301,7 +305,7 @@
                            </div>
                            <div class="icon">
                               <!-- COVID app -->
-                              <a target="_blank" href="https://zen-babbage-ecfdaf.netlify.app/" class="portfolio-link">
+                              <a target="_blank" href="https://invoice-app-main.vercel.app/" class="portfolio-link">
                                  <i class="fas fa-external-link-alt"></i>
                               </a>
                            </div>
@@ -313,22 +317,20 @@
                   <div class="portfolio-item padd-15" data-category="web-design">
                      <div class="portfolio-item-inner shadow-dark">
                         <div class="portfolio-img">
-                           <img src="images/portfolio/3.jpg" alt="portfolio">
+                           <img src="images/portfolio/audible.jpg" alt="portfolio">
                         </div>
                         <div class="portfolio-info">
-                           <h4>Bootstrap</h4>
+                           <h4>React SCSS BEM</h4>
                            <!-- GIHUB -->
                            <div class="icon__1">
-                              <a href="https://github.com/hardy333/dt" target="_blank" class="portfolio-github">
-
+                              <a href="https://github.com/hardy333/audiophile-main-new" target="_blank"
+                                 class="portfolio-github">
                                  <i class="fab fa-github-alt"></i>
-
                               </a>
                            </div>
                            <div class="icon">
                               <!--  Bootstrap prtfolio app -->
-                              <a target="_blank" href="https://hungry-nightingale-13344d.netlify.app/"
-                                 class="portfolio-link">
+                              <a target="_blank" href="https://audiophile-main-new.vercel.app/" class="portfolio-link">
                                  <i class="fas fa-external-link-alt"></i>
                               </a>
                            </div>
@@ -366,20 +368,46 @@
                   <div class="portfolio-item padd-15" data-category="wordpress">
                      <div class="portfolio-item-inner shadow-dark">
                         <div class="portfolio-img">
-                           <img src="images/portfolio/5.jpg" alt="portfolio">
+                           <img src="images/portfolio/planet.jpg" alt="portfolio">
                         </div>
                         <div class="portfolio-info">
-                           <h4>Bootstrap</h4>
+                           <h4>React bootstrap</h4>
                            <!-- GIHUB -->
                            <div class="icon__1">
-                              <a href="https://github.com/hardy333/pro" target="_blank" class="portfolio-github">
+                              <a href="https://github.com/hardy333/planets-fact-site-main" target="_blank"
+                                 class="portfolio-github">
 
                                  <i class="fab fa-github-alt"></i>
 
                               </a>
                            </div>
                            <div class="icon">
-                              <a target="_blank" href="https://zen-clarke-db882c.netlify.app/" class="portfolio-link">
+                              <a target="_blank" href="https://hardy333.github.io/planets-fact-site-main/"
+                                 class="portfolio-link">
+                                 <i class="fas fa-external-link-alt"></i>
+                              </a>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+                  <!-- Portfolio Item -->
+                  <div class="portfolio-item padd-15" data-category="wordpress">
+                     <div class="portfolio-item-inner shadow-dark">
+                        <div class="portfolio-img">
+                           <img src="images/portfolio/landing.png" alt="portfolio">
+                        </div>
+                        <div class="portfolio-info">
+                           <h4>React bootstrap</h4>
+                           <!-- GIHUB -->
+                           <div class="icon__1">
+                              <a href="https://github.com/hardy333/crm-dashboard-gatsby" target="_blank"
+                                 class="portfolio-github">
+                                 <i class="fab fa-github-alt"></i>
+                              </a>
+                           </div>
+                           <div class="icon">
+                              <a target="_blank" href="https://stellular-halva-b43ba4.netlify.app/"
+                                 class="portfolio-link">
                                  <i class="fas fa-external-link-alt"></i>
                               </a>
                            </div>
@@ -388,7 +416,6 @@
                   </div>
                   <!-- Portfolio Item end -->
                   <!-- Portfolio Item -->
-                  -->
                   <!-- Portfolio Item end -->
                </div>
 
