--- a/index.html
+++ b/index.html
@@ -104,10 +104,7 @@
                      <div class="row">
                         <div class="about-text padd-15">
                            <h3>I'm Gela Samsonidze - <span>Web Developer</span></h3>
-                           <p>Hi! I am a Front End Developer, and I'm very passionate and dedicated
-                              to my work. With 4 years experience in programming and 3+ year of experience as a
-                              professional Web developer, I have acquired the
-                              skills and knowledge necessary to make your project a success. </p>
+                           <p>Hi! I am a Senior Front-End Developer, and I'm very passionate and dedicated to my work. With more than 4 years of experience as a professional web developer, I have acquired the skills and knowledge necessary to make your project a success. </p>
                         </div>
                      </div>
                      <div class="row">
